--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -221,5 +221,8 @@
     <ClInclude Include="src\core\win32_window.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\shaders\shaders.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
