Moved Vulkan/DirectX into api folder so that in the future we can add a thin abstraction layer. Fixed bug with camera which did not set camera type. Some additional ui work.

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -25,19 +25,19 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\rendering\camera.cpp" />
-    <ClCompile Include="src\rendering\directx\d3d_context.cpp" />
+    <ClCompile Include="src\rendering\api\directx\d3d_context.cpp" />
     <ClCompile Include="src\rendering\entity.cpp" />
     <ClCompile Include="src\rendering\material.cpp" />
     <ClCompile Include="src\rendering\model.cpp" />
     <ClCompile Include="src\rendering\vertex.cpp" />
-    <ClCompile Include="src\rendering\vulkan\buffer.cpp" />
-    <ClCompile Include="src\rendering\vulkan\common.cpp" />
-    <ClCompile Include="src\rendering\vulkan\vulkan_context.cpp" />
-    <ClCompile Include="src\rendering\vulkan\descriptor_sets.cpp" />
-    <ClCompile Include="src\rendering\vulkan\renderer.cpp" />
-    <ClCompile Include="src\rendering\vulkan\shader.cpp" />
-    <ClCompile Include="src\rendering\vulkan\texture.cpp" />
-    <ClCompile Include="src\rendering\vulkan\vertex_array.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\buffer.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\common.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\vulkan_context.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\descriptor_sets.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\renderer.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\shader.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\texture.cpp" />
+    <ClCompile Include="src\rendering\api\vulkan\vertex_array.cpp" />
     <ClCompile Include="src\time.cpp" />
     <ClCompile Include="src\ui\ui.cpp" />
     <ClCompile Include="src\utility.cpp" />
@@ -67,19 +67,20 @@
     <ClInclude Include="src\logging.hpp" />
     <ClInclude Include="src\pch.hpp" />
     <ClInclude Include="src\rendering\camera.hpp" />
-    <ClInclude Include="src\rendering\directx\d3d_context.hpp" />
+    <ClInclude Include="src\rendering\api\directx\d3d_context.hpp" />
     <ClInclude Include="src\rendering\entity.hpp" />
     <ClInclude Include="src\rendering\material.hpp" />
     <ClInclude Include="src\rendering\model.hpp" />
+    <ClInclude Include="src\rendering\primitives\cube.hpp" />
     <ClInclude Include="src\rendering\vertex.hpp" />
-    <ClInclude Include="src\rendering\vulkan\buffer.hpp" />
-    <ClInclude Include="src\rendering\vulkan\common.hpp" />
-    <ClInclude Include="src\rendering\vulkan\vulkan_context.hpp" />
-    <ClInclude Include="src\rendering\vulkan\descriptor_sets.hpp" />
-    <ClInclude Include="src\rendering\vulkan\renderer.hpp" />
-    <ClInclude Include="src\rendering\vulkan\shader.hpp" />
-    <ClInclude Include="src\rendering\vulkan\texture.hpp" />
-    <ClInclude Include="src\rendering\vulkan\vertex_array.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\buffer.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\common.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\vulkan_context.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\descriptor_sets.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\renderer.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\shader.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\texture.hpp" />
+    <ClInclude Include="src\rendering\api\vulkan\vertex_array.hpp" />
     <ClInclude Include="src\shaders\shaders.hpp" />
     <ClInclude Include="src\time.hpp" />
     <ClInclude Include="src\types.hpp" />
