--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -138,7 +138,7 @@ _CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.hpp</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)src/;C:\VulkanSDK\1.3.231.1\Include/;$(SolutionDir)vendor/glfw/include/;$(SolutionDir)vendor/vma/include/;$(SolutionDir)vendor/glm/;$(SolutionDir)vendor/imgui/;$(SolutionDir)vendor/stb/;$(SolutionDir)vendor/assimp/include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)src/;C:\VulkanSDK\1.3.231.1\Include/;$(SolutionDir)vendor/glfw/include/;$(SolutionDir)vendor/vma/include/;$(SolutionDir)vendor/glm/;$(SolutionDir)vendor/imgui/;$(SolutionDir)vendor/stb/;$(SolutionDir)vendor/assimp/include/;$(SolutionDir)vendor/volk/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>pch.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
@@ -151,7 +151,7 @@ _CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
     <Lib>
-      <AdditionalDependencies>glfw3_mt.lib;vulkan-1.lib;shaderc_shared.lib;assimp-vc143-mtd.lib;zlibstaticd.lib;xaudio2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;assimp-vc143-mtd.lib;zlibstaticd.lib;xaudio2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.231.1\Lib;$(SolutionDir)vendor\glfw\lib\Release;$(SolutionDir)vendor\assimp\lib\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
@@ -169,7 +169,7 @@ _CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.hpp</PrecompiledHeaderFile>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)src/;C:\VulkanSDK\1.3.231.1\Include/;$(SolutionDir)vendor/glfw/include/;$(SolutionDir)vendor/vma/include/;$(SolutionDir)vendor/glm/;$(SolutionDir)vendor/imgui/;$(SolutionDir)vendor/stb/;$(SolutionDir)vendor/assimp/include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)src/;C:\VulkanSDK\1.3.231.1\Include/;$(SolutionDir)vendor/glfw/include/;$(SolutionDir)vendor/vma/include/;$(SolutionDir)vendor/glm/;$(SolutionDir)vendor/imgui/;$(SolutionDir)vendor/stb/;$(SolutionDir)vendor/assimp/include/;$(SolutionDir)vendor/volk/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>pch.hpp;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
@@ -184,7 +184,7 @@ _CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
     <Lib>
-      <AdditionalDependencies>glfw3_mt.lib;vulkan-1.lib;shaderc_shared.lib;assimp-vc143-mt.lib;zlibstatic.lib;xaudio2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;assimp-vc143-mt.lib;zlibstatic.lib;xaudio2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
     <Lib>
       <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.231.1\Lib;$(SolutionDir)vendor\glfw\lib\Release;$(SolutionDir)vendor\assimp\lib\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
