--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="src\rendering\api\vulkan\common.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\compressed_fonts.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\platform\windows.hpp">
@@ -228,6 +231,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="vendor\volk\volk.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ui\compressed_fonts.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
