--- a/vmve/vmve.vcxproj
+++ b/vmve/vmve.vcxproj
@@ -92,6 +92,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\misc.cpp" />
     <ClCompile Include="src\security.cpp" />
     <ClCompile Include="src\ui.cpp" />
     <ClCompile Include="src\vmve.cpp" />
@@ -103,6 +104,7 @@
     <ClCompile Include="vendor\imgui\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\misc.hpp" />
     <ClInclude Include="src\security.hpp" />
     <ClInclude Include="src\ui.hpp" />
     <ClInclude Include="src\vmve.hpp" />
