#73 Application now generates a crash log in the event of a crash.

--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -90,6 +90,9 @@
     <ClInclude Include="src\utility.hpp" />
     <ClInclude Include="vendor\volk\volk.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="changelog.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
