--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -237,4 +237,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="changelog.txt" />
+  </ItemGroup>
 </Project>
